examples/test/testpolicy1241.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1241
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key47: value10
      key23: value6
      key32: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value7
          key35: value48
      podSelector:
        matchLabels:
          key41: value40
          key32: value46
          key10: value9
